# AmpStack

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: BUILD.md  IMPLEMENTATION_PLAN.md  STACK_DESIGN.md  WORK_LOG.md
src/: App.tsx  store.ts  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  models.rs  player.rs  scanner.rs  security.rs  ytdlp.rs
